<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/background"
    tools:context="com.zk.taxi.ui.CallCar.CancelSucceedActivity">
<include layout="@layout/tool_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_margin="10dp">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="您为什么取消?"
            android:textSize="20sp"
            android:textColor="@color/loading_text"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="请告诉我们，我们继续完善"
            android:textSize="16sp"
            android:textColor="@color/loading_text"
            android:layout_gravity="center_horizontal"
            />
        <!--cb1-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            >
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/cb_1"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="20dp"/>
            <CheckBox
                android:id="@+id/cb_terms1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_terms"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                />
        </RelativeLayout>
        <!--cb2-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            >
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/cb_2"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="20dp"/>
            <CheckBox
                android:id="@+id/cb_terms2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_terms"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                />

        </RelativeLayout>
        <!--cb3-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            >
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/cb_3"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="20dp"/>
            <CheckBox
                android:id="@+id/cb_terms3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_terms"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                />

        </RelativeLayout>
        <!--cb4-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            >
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/cb_4"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="20dp"/>
            <CheckBox
                android:id="@+id/cb_terms4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_terms"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                />

        </RelativeLayout>
        <!--cb5-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            >
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/cb_5"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="20dp"/>
            <CheckBox
                android:id="@+id/cb_terms5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_terms"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                />

        </RelativeLayout>
        <!--cb6-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            >
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/cb_6"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="20dp"/>
            <CheckBox
                android:id="@+id/cb_terms6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_terms"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                />

        </RelativeLayout>
        <!--cb7-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            >
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/cb_7"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="20dp"/>
            <CheckBox
                android:id="@+id/cb_terms7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_terms"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                />

        </RelativeLayout>
        <!--more-->
       <!-- <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            >
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/more_reson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="点击查看更多原因"
                android:textColor="@color/poi_button_text_color"
                android:layout_centerInParent="true"
                />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/more_reson"
                android:layout_centerVertical="true"
                android:background="@mipmap/more_img"/>
        </RelativeLayout>-->

        </LinearLayout>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/cancel_reason"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="提交"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorPrimary"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"/>
</LinearLayout>
