<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/background"
    tools:context="com.zk.taxi.ui.CallCar.StrokeComplaintActivity">
<include layout="@layout/tool_bar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


    <!--订单时间地点-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@color/white">
      <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
          <android.support.v7.widget.AppCompatTextView
              android:id="@+id/stroke_time"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="2017-12-12"
              android:layout_marginLeft="20dp"
              android:textSize="16sp"
              android:textColor="@color/colorPrimary"/>
         </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@mipmap/st_img"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/stroke_startaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="南方消防电力大厦"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@mipmap/ed_img"
                />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/stroke_endaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="祖庙"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
        </LinearLayout>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="6dp"
        android:text="投诉类型"
        android:textSize="15sp"
        android:padding="3dp"
        android:textColor="@color/colorPrimary"/>

    <!--ct1-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:background="@color/white"
        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ct_1"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="20dp"/>
        <CheckBox
            android:id="@+id/ct1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox_terms"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            />
    </RelativeLayout>
    <!--ct2-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ct_2"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="20dp"/>
        <CheckBox
            android:id="@+id/ct2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox_terms"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            />
    </RelativeLayout>
    <!--ct3-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ct_3"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="20dp"/>
        <CheckBox
            android:id="@+id/ct3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox_terms"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            />
    </RelativeLayout>
    <!--ct4-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ct_4"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="20dp"/>
        <CheckBox
            android:id="@+id/ct4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox_terms"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            />
    </RelativeLayout>
    <!--ct5-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ct_5"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="20dp"/>
        <CheckBox
            android:id="@+id/ct5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox_terms"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            />
    </RelativeLayout>
            <!--ct6-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                >
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/ct_6"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="20dp"/>
                <CheckBox
                    android:id="@+id/ct6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_terms"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    />
            </RelativeLayout>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="6dp"
        android:text="投诉描述"
        android:textSize="15sp"
        android:padding="3dp"
        android:textColor="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/feed_backbg"
            >
            <EditText
                android:id="@+id/stroke_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/ababab"
                android:background="@null"
                android:gravity="left|top"
                android:textSize="16sp"
                android:inputType="textMultiLine"
                android:layout_margin="10dp"
                />
        </RelativeLayout>
        </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical" >
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/stroke_submit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="提交"/>
        </LinearLayout>
</LinearLayout>
